2009-01-07  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	  Prepare for 1.12.
	  
	* TODO:
	  More thinking about the documentation structure.
	  
	* configure.in:
	  Add automake support for more distcheck. Use a real sourcefile for the
	  srcdir (something that we wont remove one day).
	  
	* tests/annotations/docs/Makefile.am:
	* tests/annotations/src/Makefile.am:
	* tests/bugs/docs/Makefile.am:
	* tests/bugs/src/Makefile.am:
	* tests/gobject/docs-tmpl/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	* tests/gobject/src/Makefile.am:
	  Add missing file to fix make distcheck. Use srcdir and not builddir to
	  locate includes.

2009-01-07  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Ideas about syntax highlighing.

	* style-classic.css:
	  Old color scheme.

	* style.css:
	  Use tango colors. Simplify css.

	* tests/gobject/src/gobject.c:
	  Tell what language this is.

2009-01-04  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/src/tester.c:
	  Fix inconsistency of prototype and docs.

2009-01-04  Stefan Kost  <ensonic@users.sf.net>

	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Now aall tests pass.

2009-01-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkhtml.in:
	* tests/Makefile.am:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	* tests/gtkdoctest.sh:
	  Fix running tests, if no gtk-doc is installed yet.

2008-12-29  Stefan Kost  <ensonic@users.sf.net>

	patch by: Bruce van der Kooij  <brucevdkooij@gmail.com>

	* help/manual/C/gtk-doc-manual.xml:
	  Fixed three spelling errors (recommanded, conatins, alibrary).
	  Fixes #565835.

2008-12-29  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Documentation structure ideas.

2008-12-05  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	  Hightlight deprecation warnings.

2008-12-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Fix escaping.

2008-12-02  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Planning.

	* gtk-doc.make:
	* gtk-doc.notmpl.make: