@@ -1,5 +1,13 @@
 2009-01-07  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtk-doc.m4:
+	* gtk-doc.make:
+	* gtk-doc.notmpl.make:
+	  Detect gtkdoc-rebase in gtk-doc.m4. Based on idea of Sven Herzberg.
+	  Fixes #562310
+
+2009-01-07  Stefan Kost  <ensonic@users.sf.net>
+
 	* NEWS:
 	  Prepare for 1.12.
 	  
